--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,12 +13,14 @@ services:
     build: .
     ports:
       - "5000:5000"
+    volumes:
+      - .:/code
     environment:
       - MYSQL_USERNAME=root
       - MYSQL_PASSWORD=marlon
       - MYSQL_DATABASE=cinema
       - MYSQL_HOSTNAME=cinemadb
       - MYSQL_PORT=3306
-    command: "python ./src/index.py"
+    command: python ./src/index.py
     depends_on:
       - db
