--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,11 +5,10 @@ services:
     env_file:
       - ./.env
     ports:
-      - MYSQL_EXPOSE_PORT=$MYSQL_LOCAL_PORT
+      - $MYSQL_EXPOSE_PORT=3306
     environment:
       - MYSQL_ROOT_PASSWORD=$MYSQL_PASSWORD
       - MYSQL_DATABASE=$MYSQL_DATABASE
-      - MYSQL_TCP_PORT=$MYSQL_LOCAL_PORT
   backend:
     image: "python:3.11.1"
     container_name: cinema-backend
