--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,10 +11,10 @@ services:
       - MYSQL_DATABASE=$MYSQL_DATABASE
       - MYSQL_TCP_PORT=$MYSQL_LOCAL_PORT
     restart: always
-    healthcheck:
-      test: ["CMD", "mysqladmin", "ping", "-h", "localhsot"]
-      timeout: 20s
-      retries: 10
+    # healthcheck:
+    #   test: ["CMD", "mysqladmin", "ping", "-h", "localhsot"]
+    #   timeout: 20s
+    #   retries: 10
   backend:
     image: "python:3.11.1"
     container_name: cinema-backend
@@ -31,15 +31,15 @@ services:
       - MYSQL_HOSTNAME=$MYSQL_HOSTNAME
       - MYSQL_PORT=$MYSQL_EXPOSE_PORT
       - SECRET_KEY=$SECRET_KEY
-    command: sh -c "sleep 5s && python ./src/index.py"
+    command: sh -c "sleep 15s && python ./src/index.py"
     depends_on:
       - db
     # Links tambien se puede reemplazar con "network", no es necesario 'links' con mongodb (verificar)
     links:
       - db
     restart: on-failure
-    healthcheck:
-      test: ["CMD", "curl", "--fail", "http://localhost:$SERVER_EXPOSE_PORT"]
-      interval: 10s
-      timeout: 5s
-      retries: 10
+    # healthcheck:
+    #   test: ["CMD", "curl", "--fail", "http://localhost:$SERVER_EXPOSE_PORT"]
+    #   interval: 10s
+    #   timeout: 5s
+    #   retries: 10
